# dialoguer-multiselect

./: Cargo.toml  README.md
examples/: buffered.rs  completion.rs  confirm.rs  editor.rs  fuzzy_select.rs  group_multi_select.rs  history.rs  history_custom.rs  input.rs  multi_select.rs  paging.rs  password.rs  select.rs  sort.rs  wizard.rs
src/: lib.rs
src/prompts/: group_multi_select.rs  mod.rs
src/theme/: colorful.rs  mod.rs  render.rs
